--- a/WellmeadowsProjects/Add_Patient.resx
+++ b/WellmeadowsProjects/Add_Patient.resx
@@ -147,4 +147,7 @@
   <metadata name="LocalDoctorsTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>402, 58</value>
   </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>70</value>
+  </metadata>
 </root>
